manifests/istio/chalangeVertualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme-challenge
  namespace: istio-system
spec:
  hosts:
  - "explorewithnk.com"
  - "*.explorewithnk.com"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        exact: /.well-known/acme-challenge/
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 8080
